* more work on web interface template * fixed root redirection * fixed default mime type + added managed file module

--- a/WCell.Terminal/WebInterface/styles/terminal-ie.css
+++ b/WCell.Terminal/WebInterface/styles/terminal-ie.css
@@ -1,8 +1,9 @@
 #console {
 	font-size: 0.8em;
 }
-pre {
-	width: 98%;
-	height: 50%;
+#renderer {
 	white-space: inherit;
+}
+#tab-1 {
+	height: 450px;
 }
