--- a/WCell.Terminal/WebInterface/styles/terminal.css
+++ b/WCell.Terminal/WebInterface/styles/terminal.css
@@ -4,16 +4,16 @@ body {
 	padding: 0px;
 }
 #logo {
-	width: 400px;
-	height: 353px;
-	background-image: url('../images/wcell_logo.png');
-	background-repeat: no-repeat;
+	width: 100%;
+	height: 100%;
+	background: url('../images/wcell_logo.png') no-repeat center center; 
 }
 #console {
-	width: 800px;
+	overflow: hidden;
+	width: 1000px;
 	height: 500px;
 }
-pre {
+#renderer {
 	font-family: monospace;
 	font-size: 0.8em;
 	color: black;
@@ -24,4 +24,14 @@ pre {
 	white-space: -pre-wrap;
 	white-space: -o-pre-wrap;
 	word-wrap: break-word;
+}
+#tab-1 {
+	overflow: auto;
+	height: 80%;
+}
+.ui-widget-content {
+	background: url('../images/dialog_bg.png') transparent;
+}
+.ui-widget-header {
+	background: url('../images/dialog_title_bg.png') transparent;
 }
